--- a/WebContent/register.css
+++ b/WebContent/register.css
@@ -73,3 +73,22 @@ div#recaptcha_area {
 input#btnReset {
 	margin: 0 10px 0 125px;
 }
+
+textarea.error,
+input.error,
+select.error {
+	border-color: rgba(236, 82, 91, 0.8);
+	outline: 0;
+	outline: thin dotted \9;
+	/* IE6-9 */
+
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 91, 0.6);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 91, 0.6);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(236, 82, 91, 0.6);
+}
+
+label.error {
+	margin-left: 10px;
+	font-size: 90%;
+	color: #EC525B;
+}
